# UAP-ML

./: .gitignore  .pdm-python  README.md  UAP_ML_Azizah.ipynb  pyproject.toml
src/: klasifikasi_citra.py
