[project]
name = "UAP"
version = "0.1.0"
description = "Default template for PDM package"
authors = [
    {name = "Azizah Sisilia", email = "Azizahsisilia27@gmail.com"},
]
dependencies = ["streamlit>=1.41.1", "joblib>=1.4.2", "scikit-learn>=1.6.0"]
requires-python = ">=3.10"
readme = "README.md"
license = {text = "MIT"}

[build-system]
requires = ["pdm-backend"]
build-backend = "pdm.backend"


[tool.pdm]
distribution = true
